--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header{
@@ -16,7 +17,6 @@ header h1{
     background-size: contain;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 10px;
     font-size: 65px;
     margin: 0em;
@@ -44,12 +44,12 @@ header h1{
 
 .header__item a{
     text-decoration: none;
-    color: #fefae0;
+    color: #FEFAE0;
 }
 
 main{
     width: 100%;
-    height: 150vh;
+    height: 200vh;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -79,14 +79,15 @@ aside{
     flex-direction: column;
     gap: 1em;
     padding: 0em;
+    width: 50%;
 }
 
-.left__aside a{ 
+.links{ 
     text-decoration: none;
     color: #000;
 }
 
-.left__aside a:hover{
+.links:hover{
     text-decoration: underline;
 }
 
@@ -97,7 +98,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 margin: 1em 0em;
-background-color: #fefae0;
+background-color: #FEFAE0;
 }
 
 .aside__login form{
@@ -117,7 +118,7 @@ background-color: #fefae0;
 .product__card{
     background-color: #dda15e;
     width: 40%;
-    height: 70%;
+    height: 80vh;
     margin: 1em;
     margin: 2em auto;
     border: 1px solid #283618;
@@ -132,6 +133,7 @@ background-color: #fefae0;
 
 .product__card img{
     width: 100%;
+    height: 60%;
     border-radius: 10px 10px 0px 0px;
     transition: 2s;
 }
@@ -167,24 +169,140 @@ footer{
     width: 100%;
     height: 50vh;
     background-color: #283618;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1em;
+    justify-content: start;
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px){
-
+footer h2{
+    margin: 1em 1em 0em;
+    font-size: 50px;
+    color: #FEFAE0;
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px){
-
+.footer__list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10em;
+    width: 100%;
+    height: auto;
+    padding: 0em;
 }
 
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px){
-
+.footer__list ul{
+    margin: 0em;
+    height: auto;
+    width: 10%;
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px){
+.footer__list h3{
+    color: #FEFAE0;
+}
 
+.footer__list li{
+    color: #FEFAE0;
+    padding: 0em;
+}
+
+.alt{
+    color: #FEFAE0;
+}
+
+.footer__links{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 2em;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__links a{
+    font-size: 30px;
+    color: #FEFAE0;
+    text-decoration: none;
+}
+
+.footer__links--items{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2em;
+}
+
+.footer__links p{
+    margin: 0em;
+    color: #FEFAE0;
+}
+
+
+@media only screen and (max-width: 768px){
+    header h1{
+        font-size: 50px;
+    }
+
+    .header__item a{
+        font-size: 12px;
+    }
+
+    .header__item li{
+        padding: 10px;
+    }
+
+    main{
+        flex-direction: column;
+        height: auto;
+    }
+
+    section{
+        order: -1;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    aside{
+        width: 100%;
+        justify-content: center;
+    }
+
+    .product__card{
+        width: 80%;
+    }
+
+    .product__card img{
+        height: 50%;
+    }
+    
+    .left__aside ul{
+        align-items: center;
+    }
+
+    footer{
+        height: 100vh;
+        justify-content: center;
+    }
+
+    footer h2{
+        margin: 2em 0em 0em;
+        order: -2;
+    }
+
+    .footer__list{
+        flex-direction: column;
+        align-items: center;
+        gap: 2em;
+    }
+
+    .footer__list ul{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
